Hospital-DSL-f2d48c4c35fc96526d2fdb10bdd8c5a14254ac85/Hospital-DSL-f2d48c4c35fc96526d2fdb10bdd8c5a14254ac85/v1/src/grammar/HospitalSchemaParser.js
// Generated from HospitalSchema.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import HospitalSchemaListener from './HospitalSchemaListener.js';
import HospitalSchemaVisitor from './HospitalSchemaVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HospitalSchemaParser extends antlr4.Parser {

    static grammarFileName = "HospitalSchema.g4";
    static literalNames = [ null, "'Hospital'", "'{'", "'}'", "'Module'", 
                            "':'", "';'", "'Fields'", "'foreign'", "'[]'", 
                            "'required'", "'optional'", "'unique'", "'label'", 
                            "'default'", "'min'", "'max'", "'options'", 
                            "','", "'['", "']'", "'APIs'", "'Stats'", "'count'", 
                            "'sum'", "'avg'", "'.'", "'('", "')'", "'>'", 
                            "'<'", "'>='", "'<='", "'=='", "'grouped'", 
                            "'by'", "'='", "'null'", "'Role'", "'Auth'", 
                            "'List'", "'Get'", "'Create'", "'Update'", "'Delete'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             "LIST", "GET", "CREATE", "UPDATE", "DELETE", 
                             "BOOLEAN_LITERAL", "PATH", "ID", "INT", "STRING", 
                             "WS", "COMMENT" ];
    static ruleNames = [ "hospital", "hospitalBody", "moduleDecl", "moduleBody", 
                         "moduleItem", "fieldsDecl", "fieldDef", "fieldType", 
                         "fieldConstraint", "uniqueConstraint", "apisBlock", 
                         "apiEndpoint", "statsEndpointItem", "statsAggregation", 
                         "statsModifier", "statsModifierItem", "apiEndpointItem", 
                         "roleConfig", "roleConfigItem", "setVal", "authExpr", 
                         "apiVerb", "foreignModuleDecl", "foreignModuleBody", 
                         "foreignModuleItem", "roleDecl", "roleBody", "roleItem", 
                         "authDecl", "authBody", "authItem" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HospitalSchemaParser.ruleNames;
        this.literalNames = HospitalSchemaParser.literalNames;
        this.symbolicNames = HospitalSchemaParser.symbolicNames;
    }



	hospital() {
	    let localctx = new HospitalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HospitalSchemaParser.RULE_hospital);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        this.match(HospitalSchemaParser.T__0);
	        this.state = 63;
	        this.match(HospitalSchemaParser.ID);
	        this.state = 64;
	        this.match(HospitalSchemaParser.T__1);
	        this.state = 65;
	        this.hospitalBody();
	        this.state = 66;
	        this.match(HospitalSchemaParser.T__2);
	        this.state = 67;
	        this.match(HospitalSchemaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hospitalBody() {
	    let localctx = new HospitalBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HospitalSchemaParser.RULE_hospitalBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 71;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 69;
	                this.moduleDecl();
	                break;

	            case 2:
	                this.state = 70;
	                this.foreignModuleDecl();
	                break;

	            }
	            this.state = 75;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 79;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 76;
	            this.roleDecl();
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 83;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===39) {
	            this.state = 82;
	            this.authDecl();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleDecl() {
	    let localctx = new ModuleDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HospitalSchemaParser.RULE_moduleDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this.match(HospitalSchemaParser.T__3);
	        this.state = 86;
	        this.match(HospitalSchemaParser.ID);
	        this.state = 87;
	        this.match(HospitalSchemaParser.T__1);
	        this.state = 88;
	        this.moduleBody();
	        this.state = 89;
	        this.match(HospitalSchemaParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleBody() {
	    let localctx = new ModuleBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HospitalSchemaParser.RULE_moduleBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===7 || _la===21 || _la===47) {
	            this.state = 91;
	            this.moduleItem();
	            this.state = 96;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleItem() {
	    let localctx = new ModuleItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HospitalSchemaParser.RULE_moduleItem);
	    try {
	        this.state = 107;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 97;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 98;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 99;
	            this.match(HospitalSchemaParser.STRING);
	            this.state = 100;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 101;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 102;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 103;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 104;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 105;
	            this.fieldsDecl();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 106;
	            this.apisBlock();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldsDecl() {
	    let localctx = new FieldsDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HospitalSchemaParser.RULE_fieldsDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.match(HospitalSchemaParser.T__6);
	        this.state = 110;
	        this.match(HospitalSchemaParser.T__1);
	        this.state = 113; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 113;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 47:
	                this.state = 111;
	                this.fieldDef();
	                break;
	            case 12:
	                this.state = 112;
	                this.uniqueConstraint();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 115; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===12 || _la===47);
	        this.state = 117;
	        this.match(HospitalSchemaParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldDef() {
	    let localctx = new FieldDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HospitalSchemaParser.RULE_fieldDef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.match(HospitalSchemaParser.ID);
	        this.state = 120;
	        this.match(HospitalSchemaParser.T__4);
	        this.state = 121;
	        this.fieldType();
	        this.state = 124;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===8) {
	            this.state = 122;
	            this.match(HospitalSchemaParser.T__7);
	            this.state = 123;
	            this.match(HospitalSchemaParser.ID);
	        }

	        this.state = 129;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 261120) !== 0)) {
	            this.state = 126;
	            this.fieldConstraint();
	            this.state = 131;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 132;
	        this.match(HospitalSchemaParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldType() {
	    let localctx = new FieldTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HospitalSchemaParser.RULE_fieldType);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(HospitalSchemaParser.ID);
	        this.state = 136;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 135;
	            this.match(HospitalSchemaParser.T__8);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldConstraint() {
	    let localctx = new FieldConstraintContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HospitalSchemaParser.RULE_fieldConstraint);
	    var _la = 0;
	    try {
	        this.state = 158;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 10:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 138;
	            this.match(HospitalSchemaParser.T__9);
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 139;
	            this.match(HospitalSchemaParser.T__10);
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 140;
	            this.match(HospitalSchemaParser.T__11);
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 141;
	            this.match(HospitalSchemaParser.T__12);
	            this.state = 142;
	            this.match(HospitalSchemaParser.STRING);
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 143;
	            this.match(HospitalSchemaParser.T__13);
	            this.state = 144;
	            this.match(HospitalSchemaParser.STRING);
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 145;
	            this.match(HospitalSchemaParser.T__14);
	            this.state = 146;
	            this.match(HospitalSchemaParser.INT);
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 147;
	            this.match(HospitalSchemaParser.T__15);
	            this.state = 148;
	            this.match(HospitalSchemaParser.INT);
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 149;
	            this.match(HospitalSchemaParser.T__16);
	            this.state = 150;
	            this.match(HospitalSchemaParser.STRING);
	            this.state = 155;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 151;
	                this.match(HospitalSchemaParser.T__17);
	                this.state = 152;
	                this.match(HospitalSchemaParser.STRING);
	                this.state = 157;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	uniqueConstraint() {
	    let localctx = new UniqueConstraintContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HospitalSchemaParser.RULE_uniqueConstraint);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.match(HospitalSchemaParser.T__11);
	        this.state = 161;
	        this.match(HospitalSchemaParser.T__18);
	        this.state = 162;
	        this.match(HospitalSchemaParser.ID);
	        this.state = 167;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 163;
	            this.match(HospitalSchemaParser.T__17);
	            this.state = 164;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 169;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 170;
	        this.match(HospitalSchemaParser.T__19);
	        this.state = 171;
	        this.match(HospitalSchemaParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	apisBlock() {
	    let localctx = new ApisBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HospitalSchemaParser.RULE_apisBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.match(HospitalSchemaParser.T__20);
	        this.state = 174;
	        this.match(HospitalSchemaParser.T__1);
	        this.state = 176; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 175;
	            this.apiEndpoint();
	            this.state = 178; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 22)) & ~0x1f) === 0 && ((1 << (_la - 22)) & 8126465) !== 0));
	        this.state = 180;
	        this.match(HospitalSchemaParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	apiEndpoint() {
	    let localctx = new ApiEndpointContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HospitalSchemaParser.RULE_apiEndpoint);
	    var _la = 0;
	    try {
	        this.state = 203;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 40:
	        case 41:
	        case 42:
	        case 43:
	        case 44:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 182;
	            this.apiVerb();
	            this.state = 183;
	            this.match(HospitalSchemaParser.PATH);
	            this.state = 184;
	            this.match(HospitalSchemaParser.T__1);
	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===47) {
	                this.state = 185;
	                this.apiEndpointItem();
	                this.state = 190;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 191;
	            this.match(HospitalSchemaParser.T__2);
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 193;
	            this.match(HospitalSchemaParser.T__21);
	            this.state = 194;
	            this.match(HospitalSchemaParser.PATH);
	            this.state = 195;
	            this.match(HospitalSchemaParser.T__1);
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===47) {
	                this.state = 196;
	                this.statsEndpointItem();
	                this.state = 201;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 202;
	            this.match(HospitalSchemaParser.T__2);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statsEndpointItem() {
	    let localctx = new StatsEndpointItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HospitalSchemaParser.RULE_statsEndpointItem);
	    var _la = 0;
	    try {
	        this.state = 226;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 205;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 206;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 207;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 208;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 209;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 210;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 211;
	            this.roleConfig();
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 212;
	                this.match(HospitalSchemaParser.T__17);
	                this.state = 213;
	                this.roleConfig();
	                this.state = 218;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 219;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 221;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 222;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 223;
	            this.statsAggregation();
	            this.state = 224;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statsAggregation() {
	    let localctx = new StatsAggregationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, HospitalSchemaParser.RULE_statsAggregation);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 228;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 58818560) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 229;
	        this.match(HospitalSchemaParser.ID);
	        this.state = 232;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 230;
	            this.match(HospitalSchemaParser.T__25);
	            this.state = 231;
	            this.match(HospitalSchemaParser.ID);
	        }

	        this.state = 235;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===27) {
	            this.state = 234;
	            this.statsModifier();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statsModifier() {
	    let localctx = new StatsModifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, HospitalSchemaParser.RULE_statsModifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 237;
	        this.match(HospitalSchemaParser.T__26);
	        this.state = 238;
	        this.statsModifierItem();
	        this.state = 243;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 239;
	            this.match(HospitalSchemaParser.T__17);
	            this.state = 240;
	            this.statsModifierItem();
	            this.state = 245;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 246;
	        this.match(HospitalSchemaParser.T__27);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statsModifierItem() {
	    let localctx = new StatsModifierItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, HospitalSchemaParser.RULE_statsModifierItem);
	    var _la = 0;
	    try {
	        this.state = 264;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 248;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 249;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 250;
	            this.match(HospitalSchemaParser.STRING);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 251;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 252;
	            _la = this._input.LA(1);
	            if(!(((((_la - 29)) & ~0x1f) === 0 && ((1 << (_la - 29)) & 31) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 253;
	            this.match(HospitalSchemaParser.INT);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 254;
	            this.match(HospitalSchemaParser.T__33);
	            this.state = 255;
	            this.match(HospitalSchemaParser.T__34);
	            this.state = 256;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 261;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===26) {
	                this.state = 257;
	                this.match(HospitalSchemaParser.T__25);
	                this.state = 258;
	                this.match(HospitalSchemaParser.ID);
	                this.state = 263;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	apiEndpointItem() {
	    let localctx = new ApiEndpointItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, HospitalSchemaParser.RULE_apiEndpointItem);
	    var _la = 0;
	    try {
	        this.state = 299;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,27,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 266;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 267;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 268;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 269;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 270;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 271;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 272;
	            this.roleConfig();
	            this.state = 277;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 273;
	                this.match(HospitalSchemaParser.T__17);
	                this.state = 274;
	                this.roleConfig();
	                this.state = 279;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 280;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 282;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 283;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 284;
	            this.match(HospitalSchemaParser.T__35);
	            this.state = 285;
	            this.setVal();
	            this.state = 286;
	            this.match(HospitalSchemaParser.T__5);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 288;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 289;
	            this.match(HospitalSchemaParser.T__4);
	            this.state = 290;
	            this.match(HospitalSchemaParser.ID);
	            this.state = 295;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18) {
	                this.state = 291;
	                this.match(HospitalSchemaParser.T__17);
	                this.state = 292;
	                this.match(HospitalSchemaParser.ID);
	                this.state = 297;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 298;
	            this.match(HospitalSchemaParser.T__5);
	            break;
